--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <section class="top"></section>
+    <section class="top">
+      <div class="sidebar">
+        <nav>
+          <div class="logo">
+            <img src="./img/logo.svg" alt="logo Spotify" />
+          </div>
+          <ul>
+            <li>
+              <a href="#"><i class="fa-solid fa-house"></i>Home</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i>Cerca</a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fa-solid fa-swatchbook"></i>La tua libreria</a
+              >
+            </li>
+          </ul>
+          <h2>PLAYLIST</h2>
+          <h3><i class="fa-solid fa-square-plus"></i>Crea Playlist</h3>
+          <ul>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+          </ul>
+
+          <div class="profile">
+            <span><i class="fa-regular fa-circle-down"></i> Installa app</span>
+            <hr />
+            <span class="user"
+              ><i class="fa-solid fa-circle-user"></i> John Doe</span
+            >
+          </div>
+        </nav>
+      </div>
+    </section>
 
     <section class="bottom"></section>
   </body>
