edit sidebar part

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+      <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -22,7 +30,10 @@
           </div>
           <ul>
             <li>
-              <a href="#"><i class="fa-solid fa-house"></i>Home</a>
+              <a href="#"
+                ><i class="fa-solid fa-house white"></i
+                ><strong class="white">Home</strong></a
+              >
             </li>
             <li>
               <a href="#"><i class="fa-solid fa-magnifying-glass"></i>Cerca</a>
@@ -33,9 +44,9 @@
               >
             </li>
           </ul>
-          <h2>PLAYLIST</h2>
+          <h2 class="white">PLAYLIST</h2>
           <h3><i class="fa-solid fa-square-plus"></i>Crea Playlist</h3>
-          <ul>
+          <ul class="playlist">
             <li>Nome Playlist</li>
             <li>Nome Playlist</li>
             <li>Nome Playlist</li>
@@ -48,7 +59,7 @@
           <div class="profile">
             <span><i class="fa-regular fa-circle-down"></i> Installa app</span>
             <hr />
-            <span class="user"
+            <span class="user white"
               ><i class="fa-solid fa-circle-user"></i> John Doe</span
             >
           </div>
