edit style sidebar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     />
   </head>
   <body>
+    <!-- TOP -->
     <section class="top">
+      <!-- SIDEBAR -->
       <div class="sidebar">
         <nav>
           <div class="logo">
@@ -57,10 +59,13 @@
           </ul>
 
           <div class="profile">
-            <span><i class="fa-regular fa-circle-down"></i> Installa app</span>
+            <span class="download"
+              ><i class="fa-regular fa-circle-down"></i> Installa app</span
+            >
             <hr />
             <span class="user white"
-              ><i class="fa-solid fa-circle-user"></i> John Doe</span
+              ><i class="fa-solid fa-circle-user"></i>
+              <strong>John Doe</strong></span
             >
           </div>
         </nav>
