--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
       </div>
     </section>
 
-    <section class="bottom"></section>
+    <section class="bottom">
+      <div class="player">
+        <div class=""></div>
+      </div>
+    </section>
   </body>
 </html>
