add bottom part: content and style

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
               >
             </li>
           </ul>
-          <div class="show">
+          <div class="playlist show">
             <h2 class="white">PLAYLIST</h2>
             <h3><i class="fa-solid fa-square-plus"></i>Crea Playlist</h3>
-            <ul class="playlist">
+            <ul class="playlist-names">
               <li>Nome Playlist</li>
               <li>Nome Playlist</li>
               <li>Nome Playlist</li>
@@ -82,8 +82,44 @@
     </section>
 
     <section class="bottom">
-      <div class="player">
-        <div class=""></div>
+      <div class="song-bar d-flex">
+        <div class="song">
+          <ul class="d-flex">
+            <li>
+              <img src="./img/sinister.jpeg" alt="sinister cover song" />
+            </li>
+            <li>
+              <span
+                ><strong class="white">Sinister</strong><br />Brano nome</span
+              >
+            </li>
+            <li class="icon">
+              <i class="fa-regular fa-heart"></i
+              ><i class="fa-regular fa-folder"></i>
+            </li>
+          </ul>
+        </div>
+        <div class="player">
+          <div class="music-icon">
+            <i class="fa-solid fa-shuffle"></i
+            ><i class="fa-solid fa-backward-step"></i
+            ><i class="fa-regular fa-circle-play"></i
+            ><i class="fa-solid fa-forward-step"></i
+            ><i class="fa-solid fa-rotate-right"></i>
+          </div>
+          <div class="time">
+            <div class="minute">0:25</div>
+            <div class="bar"></div>
+            <div class="minute">4:35</div>
+          </div>
+        </div>
+        <div class="settings">
+          <div class="logo-settings">
+            <i class="fa-solid fa-bars"></i><i class="fa-solid fa-display"></i
+            ><i class="fa-solid fa-volume-high"></i>
+          </div>
+          <div class="bar-volume"></div>
+        </div>
       </div>
     </section>
   </body>
