edit bottom part: media query not working

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             ><i class="fa-solid fa-rotate-right"></i>
           </div>
           <div class="time">
-            <div class="minute">0:25</div>
+            <div class="minute white"><strong>0:25</strong></div>
             <div class="bar"></div>
-            <div class="minute">4:35</div>
+            <div class="minute white"><strong>4:35</strong></div>
           </div>
         </div>
         <div class="settings">
