add layout to main part

--- a/index.html
+++ b/index.html
@@ -79,6 +79,50 @@
           </div>
         </nav>
       </div>
+
+      <div class="main">
+        <div class="upgrade">
+          <h3>EFFETTUA L'UPGRADE</h3>
+        </div>
+          <div class="content">
+            <nav class="type">
+              <ul class="d-flex">
+                <li>LOREM</li>
+                <li>LOREM</li>
+                <li>LOREM</li>
+                <li>LOREM</li>
+                <li>LOREM</li>
+                <li>LOREM</li>
+              </ul>
+            </nav>
+            <div class="recently-p" >
+              <h2>Lorem, ipsum.</h2>
+              <div class="albums d-flex">
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+              </div>
+            </div>
+            <div class="for-you">
+              <h2>Lorem, ipsum.</h2>
+              <div class="albums d-flex">
+                <div class="album"></div>
+                <div class="album"></div>
+              </div>
+            </div>
+            <div class="popular-artists">
+              <h2>Lorem, ipsum.</h2>
+              <div class="albums d-flex">
+                <div class="album"></div>
+                <div class="album"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="bottom">
