add upgrade part

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <div class="main">
         <div class="upgrade">
-          <h3>EFFETTUA L'UPGRADE</h3>
+          <span>EFFETTUA L'UPGRADE</span>
         </div>
           <div class="content">
             <nav class="type">
