add album covers

--- a/index.html
+++ b/index.html
@@ -87,37 +87,58 @@
           <div class="content">
             <nav class="type">
               <ul class="d-flex">
-                <li>LOREM</li>
-                <li>LOREM</li>
-                <li>LOREM</li>
-                <li>LOREM</li>
-                <li>LOREM</li>
-                <li>LOREM</li>
+                <li>IN EVIDENZA</li>
+                <li>PODCAST</li>
+                <li>CLASSIFICHE</li>
+                <li>GENERI E MOOD</li>
+                <li>NUOVE USCITE</li>
+                <li>SCOPRI</li>
               </ul>
             </nav>
-            <div class="recently-p" >
-              <h2>Lorem, ipsum.</h2>
+            <div class="recently-p white" >
+              <h2>Recently played</h2>
               <div class="albums d-flex">
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
+                <div class="album">
+                  <img src="./img/metal_lifting.jpg" alt="">
+                </div>
+                <div class="album">
+                  <img src="./img/stranger.jpeg" alt="">
+                </div>
+                <div class="album">
+                  <img src="./img/aquietplace.jpeg" alt="">
+                </div>
+                <div class="album">
+                  <img src="./img/split.jpeg" alt="">
+                </div>
+                <div class="album">
+                  <img src="img/cure.jpeg" alt="">
+                </div>
+                <div class="album">
+                  <img src="./img/sinister.jpeg" alt="">
+                </div>
               </div>
             </div>
-            <div class="for-you">
-              <h2>Lorem, ipsum.</h2>
+            <div class="for-you white">
+              <h2 id="create-for">Creato per John Doe</h2>
+              <span class="subtitle">Più ascolti, più saranno accurati i suggerimenti.</span>
               <div class="albums d-flex">
-                <div class="album"></div>
-                <div class="album"></div>
+                <div class="album">
+                  <img src="img/radar.jpeg" alt="">
+                </div>
+                <div class="album">
+                  <img src="./img/mixdaily.jpeg" alt="">
+                </div>
               </div>
             </div>
-            <div class="popular-artists">
-              <h2>Lorem, ipsum.</h2>
+            <div class="popular-artists white">
+              <h2>Artisti più popolari</h2>
               <div class="albums d-flex">
-                <div class="album"></div>
-                <div class="album"></div>
+                <div class="album">
+                  <img src="./img/youg.jpeg" alt="">
+                </div>
+                <div class="album">
+                  <img src="./img/einaudi.jpeg" alt="">
+                </div>
               </div>
             </div>
           </div>
