--- a/index.html
+++ b/index.html
@@ -100,21 +100,33 @@
               <div class="albums d-flex">
                 <div class="album">
                   <img src="./img/metal_lifting.jpg" alt="">
+                  <h4>Heavy Metal</h4>
+                  <span class="subtitle">Subtitle</span>
                 </div>
                 <div class="album">
                   <img src="./img/stranger.jpeg" alt="">
+                  <h4>Stranger Things, vol. 1 (a Netflix origianl series Soundtrack)</h4>
+                  <span class="subtitle">Kyle Dixon & Michael Stein</span>
                 </div>
                 <div class="album">
                   <img src="./img/aquietplace.jpeg" alt="">
+                  <h4>A quiet place</h4>
+                  <span class="subtitle">Subtitle</span>
                 </div>
                 <div class="album">
                   <img src="./img/split.jpeg" alt="">
+                  <h4>Split</h4>
+                  <span class="subtitle">Subtitle</span>
                 </div>
                 <div class="album">
                   <img src="img/cure.jpeg" alt="">
+                  <h4>A cure for wellness</h4>
+                  <span class="subtitle">Subtitle</span>
                 </div>
                 <div class="album">
                   <img src="./img/sinister.jpeg" alt="">
+                  <h4>Sinister</h4>
+                  <span class="subtitle">Subtitle</span>
                 </div>
               </div>
             </div>
@@ -124,14 +136,17 @@
               <div class="albums d-flex">
                 <div class="album">
                   <img src="img/radar.jpeg" alt="">
+                  <h4>Relase Radar</h4>
                 </div>
                 <div class="album">
                   <img src="./img/mixdaily.jpeg" alt="">
+                  <h4>Daily Mix 1</h4>
                 </div>
               </div>
             </div>
             <div class="popular-artists white">
               <h2>Artisti più popolari</h2>
+              <span class="subtitle">Più ascolti, più saranno accurati i suggerimenti.</span>
               <div class="albums d-flex">
                 <div class="album">
                   <img src="./img/youg.jpeg" alt="">
