add hover effects

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               >
             </li>
             <li>
-              <a href="#"
+              <a href="#" class="playlist-title"
                 ><i class="fa-solid fa-swatchbook"></i
                 ><span class="show">La tua libreria</span></a
               >
@@ -84,76 +84,82 @@
         <div class="upgrade">
           <span>EFFETTUA L'UPGRADE</span>
         </div>
-          <div class="content">
-            <nav class="type">
-              <ul class="d-flex">
-                <li>IN EVIDENZA</li>
-                <li>PODCAST</li>
-                <li>CLASSIFICHE</li>
-                <li>GENERI E MOOD</li>
-                <li>NUOVE USCITE</li>
-                <li>SCOPRI</li>
-              </ul>
-            </nav>
-            <div class="recently-p white" >
-              <h2>Recently played</h2>
-              <div class="albums d-flex">
-                <div class="album">
-                  <img src="./img/metal_lifting.jpg" alt="">
-                  <h4>Heavy Metal</h4>
-                  <span class="subtitle">Subtitle</span>
-                </div>
-                <div class="album">
-                  <img src="./img/stranger.jpeg" alt="">
-                  <h4>Stranger Things, vol. 1 (a Netflix origianl series Soundtrack)</h4>
-                  <span class="subtitle">Kyle Dixon & Michael Stein</span>
-                </div>
-                <div class="album">
-                  <img src="./img/aquietplace.jpeg" alt="">
-                  <h4>A quiet place</h4>
-                  <span class="subtitle">Subtitle</span>
-                </div>
-                <div class="album">
-                  <img src="./img/split.jpeg" alt="">
-                  <h4>Split</h4>
-                  <span class="subtitle">Subtitle</span>
-                </div>
-                <div class="album">
-                  <img src="img/cure.jpeg" alt="">
-                  <h4>A cure for wellness</h4>
-                  <span class="subtitle">Subtitle</span>
-                </div>
-                <div class="album">
-                  <img src="./img/sinister.jpeg" alt="">
-                  <h4>Sinister</h4>
-                  <span class="subtitle">Subtitle</span>
-                </div>
+        <div class="content">
+          <nav class="type">
+            <ul class="d-flex">
+              <li>IN EVIDENZA</li>
+              <li>PODCAST</li>
+              <li>CLASSIFICHE</li>
+              <li>GENERI E MOOD</li>
+              <li>NUOVE USCITE</li>
+              <li>SCOPRI</li>
+            </ul>
+          </nav>
+          <div class="recently-p white">
+            <h2>Recently played</h2>
+            <div class="albums d-flex center">
+              <div class="album">
+                <img src="./img/metal_lifting.jpg" alt="" />
+                <i class="fa-regular fa-circle-play hidden"></i>
+                <h4>Heavy Metal</h4>
+                <span class="subtitle">Subtitle</span>
+              </div>
+              <div class="album">
+                <img src="./img/stranger.jpeg" alt="" />
+                <h4>
+                  Stranger Things, vol. 1 (a Netflix origianl series Soundtrack)
+                </h4>
+                <span class="subtitle">Kyle Dixon & Michael Stein</span>
+              </div>
+              <div class="album">
+                <img src="./img/aquietplace.jpeg" alt="" />
+                <h4>A quiet place</h4>
+                <span class="subtitle">Subtitle</span>
+              </div>
+              <div class="album">
+                <img src="./img/split.jpeg" alt="" />
+                <h4>Split</h4>
+                <span class="subtitle">Subtitle</span>
+              </div>
+              <div class="album">
+                <img src="img/cure.jpeg" alt="" />
+                <h4>A cure for wellness</h4>
+                <span class="subtitle">Subtitle</span>
+              </div>
+              <div class="album">
+                <img src="./img/sinister.jpeg" alt="" />
+                <h4>Sinister</h4>
+                <span class="subtitle">Subtitle</span>
               </div>
             </div>
-            <div class="for-you white">
-              <h2 id="create-for">Creato per John Doe</h2>
-              <span class="subtitle">Più ascolti, più saranno accurati i suggerimenti.</span>
-              <div class="albums d-flex">
-                <div class="album">
-                  <img src="img/radar.jpeg" alt="">
-                  <h4>Relase Radar</h4>
-                </div>
-                <div class="album">
-                  <img src="./img/mixdaily.jpeg" alt="">
-                  <h4>Daily Mix 1</h4>
-                </div>
+          </div>
+          <div class="for-you white">
+            <h2 id="create-for">Creato per John Doe</h2>
+            <span class="subtitle"
+              >Più ascolti, più saranno accurati i suggerimenti.</span
+            >
+            <div class="albums center d-flex">
+              <div class="album">
+                <img src="img/radar.jpeg" alt="" />
+                <h4>Relase Radar</h4>
+              </div>
+              <div class="album">
+                <img src="./img/mixdaily.jpeg" alt="" />
+                <h4>Daily Mix 1</h4>
               </div>
             </div>
-            <div class="popular-artists white">
-              <h2>Artisti più popolari</h2>
-              <span class="subtitle">Più ascolti, più saranno accurati i suggerimenti.</span>
-              <div class="albums d-flex">
-                <div class="album">
-                  <img src="./img/youg.jpeg" alt="">
-                </div>
-                <div class="album">
-                  <img src="./img/einaudi.jpeg" alt="">
-                </div>
+          </div>
+          <div class="popular-artists white">
+            <h2>Artisti più popolari</h2>
+            <span class="subtitle"
+              >Più ascolti, più saranno accurati i suggerimenti.</span
+            >
+            <div class="albums d-flex">
+              <div class="album center">
+                <img src="./img/youg.jpeg" alt="" />
+              </div>
+              <div class="album center">
+                <img src="./img/einaudi.jpeg" alt="" />
               </div>
             </div>
           </div>
@@ -169,8 +175,8 @@
               <img src="./img/sinister.jpeg" alt="sinister cover song" />
             </li>
             <li>
-              <span
-                ><strong class="white">Sinister</strong><br />Brano nome</span
+              <strong class="white">Sinister</strong><br /><span
+                >Brano nome</span
               >
             </li>
             <li class="icon">
@@ -181,11 +187,11 @@
         </div>
         <div class="player">
           <div class="music-icon">
-            <i class="fa-solid fa-shuffle"></i
-            ><i class="fa-solid fa-backward-step"></i
-            ><i class="fa-regular fa-circle-play"></i
-            ><i class="fa-solid fa-forward-step"></i
-            ><i class="fa-solid fa-rotate-right"></i>
+            <i class="fa-solid fa-shuffle"></i>
+            <i class="fa-solid fa-backward-step"></i>
+            <i class="fa-regular fa-circle-play"></i>
+            <i class="fa-solid fa-forward-step"></i>
+            <i class="fa-solid fa-rotate-right"></i>
           </div>
           <div class="time">
             <div class="minute white"><strong>0:25</strong></div>
