--- a/index.html
+++ b/index.html
@@ -99,35 +99,52 @@
             <h2>Recently played</h2>
             <div class="albums d-flex center">
               <div class="album">
-                <img src="./img/metal_lifting.jpg" alt="" />
-                <i class="fa-regular fa-circle-play hidden"></i>
+                <div class="cover">
+                  <img src="./img/metal_lifting.jpg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>Heavy Metal</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
-                <img src="./img/stranger.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/stranger.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>
                   Stranger Things, vol. 1 (a Netflix origianl series Soundtrack)
                 </h4>
                 <span class="subtitle">Kyle Dixon & Michael Stein</span>
               </div>
               <div class="album">
-                <img src="./img/aquietplace.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/aquietplace.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>A quiet place</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
-                <img src="./img/split.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/split.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>Split</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
-                <img src="img/cure.jpeg" alt="" />
+                <div class="cover">
+                  <img src="img/cure.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>A cure for wellness</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
-                <img src="./img/sinister.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/sinister.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>Sinister</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
@@ -140,11 +157,17 @@
             >
             <div class="albums center d-flex">
               <div class="album">
-                <img src="img/radar.jpeg" alt="" />
+                <div class="cover">
+                  <img src="img/radar.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>Relase Radar</h4>
               </div>
               <div class="album">
-                <img src="./img/mixdaily.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/mixdaily.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
                 <h4>Daily Mix 1</h4>
               </div>
             </div>
@@ -156,10 +179,16 @@
             >
             <div class="albums d-flex">
               <div class="album center">
-                <img src="./img/youg.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/youg.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
               </div>
               <div class="album center">
-                <img src="./img/einaudi.jpeg" alt="" />
+                <div class="cover">
+                  <img src="./img/einaudi.jpeg" alt="" />
+                  <i class="fa-regular fa-circle-play hidden"></i>
+                </div>
               </div>
             </div>
           </div>
