--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <!-- SIDEBAR -->
       <div class="sidebar">
         <nav>
-          <div class="logo">
+          <div class="logo padding-left">
             <img class="logo-big" src="./img/logo.svg" alt="logo Spotify" />
             <img class="logo-small" src="./img/logo-small.svg" alt="" />
           </div>
           <ul>
-            <li>
+            <li class="padding-left">
               <a href="#"
                 ><i class="fa-solid fa-house white"></i
                 ><strong class="white"
@@ -40,20 +40,20 @@
                 ></a
               >
             </li>
-            <li>
+            <li class="padding-left">
               <a href="#"
                 ><i class="fa-solid fa-magnifying-glass"></i
                 ><span class="show">Cerca</span></a
               >
             </li>
-            <li>
+            <li class="padding-left">
               <a href="#" class="playlist-title"
                 ><i class="fa-solid fa-swatchbook"></i
                 ><span class="show">La tua libreria</span></a
               >
             </li>
           </ul>
-          <div class="playlist show">
+          <div class="playlist show padding-left">
             <h2 class="white">PLAYLIST</h2>
             <h3><i class="fa-solid fa-square-plus"></i>Crea Playlist</h3>
             <ul class="playlist-names">
@@ -66,7 +66,7 @@
               <li>Nome Playlist</li>
             </ul>
           </div>
-          <div class="profile">
+          <div class="profile padding-left">
             <span class="download"
               ><i class="fa-regular fa-circle-down"></i>
               <span class="show"> Installa app</span></span
