--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="upgrade">
           <span>EFFETTUA L'UPGRADE</span>
         </div>
-        <div class="content">
+        <div class="content d-flex">
           <nav class="type">
             <ul class="d-flex">
               <li>IN EVIDENZA</li>
@@ -95,7 +95,7 @@
               <li>SCOPRI</li>
             </ul>
           </nav>
-          <div class="recently-p white">
+          <div class="recently-p d-flex white">
             <h2>Recently played</h2>
             <div class="albums d-flex center">
               <div class="album">
