--- a/index.html
+++ b/index.html
@@ -100,16 +100,20 @@
             <div class="albums d-flex center">
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/metal_lifting.jpg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>Heavy Metal</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/stranger.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>
                   Stranger Things, vol. 1 (a Netflix origianl series Soundtrack)
@@ -118,32 +122,40 @@
               </div>
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/aquietplace.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>A quiet place</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/split.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>Split</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="img/cure.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>A cure for wellness</h4>
                 <span class="subtitle">Subtitle</span>
               </div>
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/sinister.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>Sinister</h4>
                 <span class="subtitle">Subtitle</span>
@@ -158,15 +170,19 @@
             <div class="albums center d-flex">
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="img/radar.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>Relase Radar</h4>
               </div>
               <div class="album">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/mixdaily.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
                 <h4>Daily Mix 1</h4>
               </div>
@@ -180,14 +196,18 @@
             <div class="albums d-flex">
               <div class="album center">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/youg.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
               </div>
               <div class="album center">
                 <div class="cover">
+                  <div class="overlay hidden">
+                    <i class="fa-regular fa-circle-play hidden"></i>
+                  </div>
                   <img src="./img/einaudi.jpeg" alt="" />
-                  <i class="fa-regular fa-circle-play hidden"></i>
                 </div>
               </div>
             </div>
