--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="logo-big" src="./img/logo.svg" alt="logo Spotify" />
             <img class="logo-small" src="./img/logo-small.svg" alt="" />
           </div>
-          <ul>
+          <ul class="home-menu">
             <li class="padding-left">
               <a href="#"
                 ><i class="fa-solid fa-house white"></i
@@ -224,8 +224,10 @@
               <img src="./img/sinister.jpeg" alt="sinister cover song" />
             </li>
             <li>
-              <strong class="white">Sinister</strong><br /><span
-                >Brano nome</span
+              <span
+                ><strong class="white">Sinister</strong><br /><span
+                  >Brano nome</span
+                ></span
               >
             </li>
             <li class="icon">
@@ -244,7 +246,7 @@
           </div>
           <div class="time">
             <div class="minute white"><strong>0:25</strong></div>
-            <div class="bar"></div>
+            <div class="bar"><i class="fa-solid fa-circle"></i></div>
             <div class="minute white"><strong>4:35</strong></div>
           </div>
         </div>
@@ -253,7 +255,7 @@
             <i class="fa-solid fa-bars"></i><i class="fa-solid fa-display"></i
             ><i class="fa-solid fa-volume-high"></i>
           </div>
-          <div class="bar-volume"></div>
+          <div class="bar-volume"><i class="fa-solid fa-circle"></i></div>
         </div>
       </div>
     </section>
