--- a/index.html
+++ b/index.html
@@ -33,22 +33,18 @@
           </div>
           <ul class="home-menu">
             <li class="padding-left">
-              <a href="#"
-                ><i class="fa-solid fa-house white"></i
-                ><strong class="white"
-                  ><span class="show">Home</span></strong
-                ></a
-              >
+              <a href="#">
+                <img id="home-img" src="./img/home.svg" alt=""><strong class="white">
+                  <span class="show">Home</span></strong></a>
             </li>
             <li class="padding-left">
               <a href="#"
-                ><i class="fa-solid fa-magnifying-glass"></i
-                ><span class="show">Cerca</span></a
+                ><img src="./img/search.svg" alt=""><span class="show">Cerca</span></a
               >
             </li>
             <li class="padding-left">
               <a href="#" class="playlist-title"
-                ><i class="fa-solid fa-swatchbook"></i
+                ><img src="./img/libreria.svg" alt=""></i
                 ><span class="show">La tua libreria</span></a
               >
             </li>
