edit img and content

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="upgrade">
           <span>EFFETTUA L'UPGRADE</span>
         </div>
-        <div class="content d-flex">
+        <div class="content">
           <nav class="type">
             <ul class="d-flex">
               <li>IN EVIDENZA</li>
@@ -163,8 +163,8 @@
             <span class="subtitle"
               >Più ascolti, più saranno accurati i suggerimenti.</span
             >
-            <div class="albums center d-flex">
-              <div class="album">
+            <div class="albums  d-flex">
+              <div class="album center">
                 <div class="cover">
                   <div class="overlay hidden">
                     <i class="fa-regular fa-circle-play hidden"></i>
@@ -173,7 +173,7 @@
                 </div>
                 <h4>Relase Radar</h4>
               </div>
-              <div class="album">
+              <div class="album center">
                 <div class="cover">
                   <div class="overlay hidden">
                     <i class="fa-regular fa-circle-play hidden"></i>
